[tool.poetry]
name = "repl_python3_hyperpiramidingreversemartin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cufflinks = "^0.17.3"
flask = "^1.1.2"
flask-sqlalchemy = "^2.5.1"
pandas = "^1.2.4"
plotly = "^4.14.3"
chart-studio = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
